<resources>
    <string name="app_name">Eftar</string>
    <string name="video_head">Top 3 real-time popular videos related to economy</string>
    <string name="domestic_rank_text">Domestic ranking</string>
    <string name="acs_text">Ascending Order</string>
    <string name="transact_text">Transactional Order</string>
    <string name="more">See More</string>
    <string name="less">See Less</string>
    <string name="back_info">Please click BACK again to exit.</string>
    <string name="an_summary">Analysis summary</string>
    <string name="item_details">Item Details</string>
    <string name="interest_point">Interest rate to maturity :</string>
    <string name="point2">points.</string>
    <string name="interest_income_point">Interest income: </string>
    <string name="credit_point">Credit rating: </string>
    <string name="maturity">Interest rate to maturity</string>
    <string name="income">Interest income is </string>
    <string name="rating">Credit Rating</string>
    <string name="circ_rating">Rating</string>
    <string name="circ_score">: Total score</string>
    <string name="note">Note:</string>
    <string name="note_content">Yield to maturity calculated based on 1 million won</string>
    <string name="loading">Loading...</string>
    <string name="issue_code">Issue Code:   </string>
    <string name="markey_type">Market Type:   </string>
    <string name="price_close">Price-Close:   </string>
    <string name="bond_type">Bond Type:   </string>
    <string name="returns">Yield:   </string>
    <string name="t_volume">Trading Volume:   </string>
    <string name="t_value">Trading Value:   </string>
    <string name="res_maturity">Residual Maturity:   </string>
    <string name="c_rating">Credit Rating:   </string>
    <string name="listed_amt">Listed Amount:   </string>
    <string name="currency">KRW</string>
    <string name="no_internet">Bond data server error or device has no internet</string>
    <string name="grade">: Grade</string>
</resources>